# mengdie

./: .gitignore  .mengdie.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.claude/: pipeline.yml
.forgejo/workflows/: ci.yml  release.yml
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml  release.yml
docs/: ae-integration.md  blueprint.md  cli.md  prd-ae-integration.md  roadmap.md  technical-design.md  v0.0.1-rebuild-plan.md  v0.0.1-tech.md  v1-rebuild-plan.md
docs/analyses/: 001-retrospect-plan-001-002.md  002-retrospect-plans-001-003.md  003-retrospect-plans-001-011.md  004-comparison-002-vs-003.md  005-roadmap-2026-04-19.md
docs/backlog/: 001-qmd-learnings.md  002-review-deferred.md  003-review-p3.md  004-analyze-findings.md  005-phase2-roadmap.md  006-ci-runner-env-cleanup.md  BL-ae-work-closes-parent-discussion.md  BL-ci-full-clippy-test.md  BL-clustering-validation.md  BL-decay-dreaming-pass-optim.md  BL-decay-json-schema-contract.md  BL-decay-ops-doc-polish.md  BL-dreaming-module-split.md  BL-fk-pragma-and-deletion-safety.md  BL-synthesis-cli-skip-metric.md  BL-synthesis-dedup-key.md  BL-synthesis-preload-db-miss-edge.md  BL-synthesis-provenance.md  BL-synthesis-result-struct-promotion.md  BL-valid-until-boundary.md  BL-verify-decay-script-hardening.md
docs/milestones/: v0.0.1.prd.md
docs/operations/: dreaming-decay.md
docs/plans/: 001-mvp-phase1.md  002-close-the-loop.md  003-phase-1.1.md  004-search-quality-fixes.md  005-project-naming.md  006-dream-mvp.md  007-llm-provider-claude-cli.md  008-ci-pipeline-and-lint-debt.md  009-embedding-clustering.md  010-dream-synthesis.md  011-residuals-reduction.md  012-synthesis-cli-skip-metric.md  013-exponential-decay.md  014-ci-runner-env-fix.md  015-decay-operator-surface-hardening.md  016-decay-ops-doc-polish.md  017-synthesis-cluster-hardening.md  018-sqlite-vec-compat-spike.md  019-synthesis-cli-json-schema.md
docs/releases/: v0.0.1.md  v0.0.2.md
docs/reviews/: 001-mvp-phase1.md  002-close-the-loop.md  003-phase-1.1.md  004-search-quality-fixes.md  005-project-naming.md  006-llm-provider-claude-cli.md  007-embedding-clustering.md  008-dream-synthesis.md  009-residuals-reduction.md  010-synthesis-cli-skip-metric.md  011-bl008-exponential-decay.md  012-ci-runner-env-fix.md  013-decay-operator-surface-hardening.md  014-decay-ops-doc-polish.md  015-synthesis-cluster-hardening.md  016-sqlite-vec-compat-spike.md  019-synthesis-cli-json-schema.md
docs/schemas/: dreaming_pass.json
docs/specs/: memory_entity_facts.md  memory_get.md  memory_ingest.md  memory_invalidate.md  memory_lint.md  memory_search.md  memory_status.md  mengdie-cli.md
docs/spikes/: 019-rate-limit-measurement.md  019-synthesis-cli-stdin-vs-argv-probe.md  (+3 more)
resources/: com.mengdie.dream.plist  com.second-brain.dream.plist  synthesis-output-schema.json
scripts/: verify-decay.sh
src/core/: db.rs  (+20 more)
tests/: audit_stats.rs  decay_contract.rs  dream_synthesis.rs  e2e.rs  embeddings.rs  llm_claude_cli.rs  mcp_integration.rs  ops_doc_sql.rs  reembed_synthesis_e2e.rs  synthesis_e2e.rs
(+453 files in other folders)
