[package]
name = "second-brain"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.39", features = ["bundled", "load_extension"] }
rmcp = { version = "1.3", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
fastembed = "5"
notify = "8"
notify-debouncer-mini = "0.5"
dirs-next = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"

[[bin]]
name = "second-brain"
path = "src/bin/cli.rs"

[[bin]]
name = "second-brain-mcp"
path = "src/bin/mcp_server.rs"

[lib]
name = "second_brain"
path = "src/lib.rs"
