[package]
name = "mengdie"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.39", features = ["bundled", "load_extension"] }
rmcp = { version = "1.3", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls", "image-models"] }
notify = "8"
notify-debouncer-mini = "0.7"
walkdir = "2"
dirs-next = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "mengdie"
path = "src/bin/cli.rs"

[[bin]]
name = "mengdie-mcp"
path = "src/bin/mcp_server.rs"

[lib]
name = "mengdie"
path = "src/lib.rs"
